# atlas-helper

./: CMakeLists.txt  Makefile
firmware/: CMakeLists.txt  atlas-helper.ino  main.cpp
hardware/: atlas-rig-cache.lib  atlas-rig-rescue.lib  atlas-rig.bak  atlas-rig.kicad_pcb  atlas-rig.kicad_pcb-bak  atlas-rig.net  atlas-rig.pro  atlas-rig.sch
hardware/gerbers/: atlas-rig-B.Cu.gbr  atlas-rig-B.SilkS.gbr  atlas-rig-Edge.Cuts.gbr  atlas-rig-F.Cu.gbr  atlas-rig-F.SilkS.gbr  atlas-rig.drl
